ckanext/dgu/theme/src/css/dgu-ckan.less
/* ... */
body.controller-feedback,
body.controller-package {
  .package {
    .dataset-theme {
      float: right;
      margin-left: 20px;
      padding: 19px 0;
      min-width: 100px;
      text-align: right;
      font-size: 17px;
      .theme-name {
        display: block;
        padding-left: 35px;
        padding-right: 20px;
        border-right: 4px #fff solid;
      }
    }
    .dataset-optional-logo {
      float: right;
      display: block;
      margin-left: 15px;
      img {
        border: 1px solid #666;
        padding: 2px #ccc;
      }
    }
    .dataset-stars {
      i {color: #666;}
    }
    .notes .notes-inner {
      padding-top: 15px;
    }
  }
  .dataset-resource {
    margin-bottom: 22px;
    min-height: 110px;
    position: relative;
    font-size: 17px;
    .dataset-resource-format {
      border-top-left-radius: 4px;
      border-bottom-left-radius: 4px;
      position: absolute;
      left: 0;
      top: 0;
      bottom: 0;
      width: 20%;
      background: #4244D7;
      i {
        display: block;
        position: absolute;
        top: 17%;
        width: 100%;
        text-align: center;
        color: #fff;
      }
      .format-name {
        display: block;
        position: absolute;
        top: 67%;
        width: 100%;
        text-align: center;
        color: #fff;
        font-weight: bold;
      }
    }
    .dataset-resource-text {
      background: #fff;
      position: absolute;
      left: 20%;
      top: 0;
      bottom: 0;
      width: 60%;
      height: 110px;
      overflow: hidden;
      .inner {
        display: table;
        height: 100%;
      }
      .inner2 {
        display: block;
        padding: 9px 20px;
        display: table-cell; 
        vertical-align: middle; 
      }
    }
    .dropdown {
      height: 110px;
      .dataset-resource-chevron {
        border-top-right-radius: 4px;
        border-bottom-right-radius: 4px;
        position: absolute;
        display: block;
        background: #fff;
        right: 0;
        top: 0;
        height: 110px;
        width: 20%;
        border-left: 1px solid #e0e0e0;
        height: 100%;
        text-align: center;
        padding-top: 38px;
        color: #A3A3A3; 
        text-decoration: none !important;
        &:hover {
          background: #e0e0e0;
          color: #666; 
        }
      }
    }
    .dropdown-menu {
      left: auto;
      right: 0;
    }
  }
  .dataset-map-info {
    padding: 20px;
    color: #999;
    h3 {
      text-transform: uppercase;
      font-size: 14px;
    }
    .map-buttons > div{
      text-align: right;
      margin-bottom: 10px;
    }
    #dataset-map-attribution{
      font-size: 8px;
      line-height: 12px;
      text-align: left;
      margin-top: -6px;
    }
  }
  .dataset-map {
    #dataset-map-container {
      //width: 350px;   // size should be set on a per map instance basis
      //height: 280px;
      background: #ccc;
      margin-bottom: 20px !important;
      position: relative; // required for map tooltips positioning
      div.olControlAttribution {
        font-size: 9px;
        font-family: helvetica,tahoma,verdana,sans-serif;
        line-height: 12px;
        left: 5px;
        bottom: 3px;
        color: #666;
      }
    }
  }
  .dataset-feedback-container {
    margin-top: 16px;
    margin-bottom: 28px;
  }
  .view-feedback-link {
    display: block;
    margin-top: 13px;
    margin-left: 18px;
  }
}

/* PAGE: Resource/read */
/* ------------------- */
body.controller-package.action-resource_read {
  .resource-notes {
    margin-bottom: 20px;
  }
  .resource-url-analytics .tooltip-inner {
    max-width: 500px;
  }
    .quick-info {
        > div {
            margin-bottom: 9px;
        }
    }
}

/* PAGE: Package/new,
 *       Package/edit
 * ------------------ */
body.controller-package.action-new,
body.controller-package.action-edit {
  #individual_resources-table,
  #additional_resources-table,
  #timeseries_resources-table {
    td > input[type="text"], 
    td > .input-group {
      width: 100%;
      max-width: 100%;
      min-width: 200px;
    }
  }
  .tooltip-inner {
    text-align: left;
    max-width: 450px;
    padding: 10px;
    font-weight: normal;

  }
    .tab-content {
      /*
        display: block;
        width: auto;
        > fieldset {
            border: 1px solid #DDD;
            padding: 20px;
            min-height: 338px;
        }
        */
    }
    #section-description-field p {
        margin-top: 10px;
    }
    .nav-backnext {
        float: right;
    }
    #disclaimer p,
    #disclaimer input {
        display: inline-block;
        *display: inline;
        zoom: 1;
        max-width: 400px;
        vertical-align: top;
        margin-left: 10px;
    }
    a.disabled {
        color: #a6a6a6;
        cursor: default;
        &:hover {
            background-color: transparent;
            cursor: default;
            border-color: transparent;
        }
    }
    .fieldset_button_error {
        background: transparent url(../images/icons/error.png) right center no-repeat;
    }
    table .field_error {
        /* I *think* this applies to resources only? */
        border-color: #FF6666;
        background: transparent url(../images/icons/error.png) 98% center no-repeat;
    }
    .resource-move-cell {
        width: 39px;
        min-width: 39px;
        padding: 6px 1px 0 1px !important;
        .btn {
          line-height: 0;
          padding: 4px 1px;
        }
    }
    .resource-url .error input {
        background: transparent url(../images/icons/error.png) 98% center no-repeat;
    }
    #mandates-list {
        list-style: none;
        margin-left: 0;
        padding-left: 0;
        li {
            padding: 2px;
        }
    }
}
/* ... */

